# awesome-python-projects

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Guess the number README.md  LICENSE  Mutiply two matrices  Palindrome.py  README  README.md  ROCKPAPERSCISSOR.py  Secure your password.py  Secure your password.txt  airqualitydetector.py  covidnotifier.py  pull_request_template.md  tic_tac_toe  weatherapp.py
2048 Game/: 2048.py  logic.py
AIR_QUALITY_DETECTOR/: airqualitydetector.py
ALARM_CLOCK/: AlarmClock.py
Admission Prediction using ML/: Admission_Predict_Ver1.1.csv  Thumbs.db  admission_prediction_using_machine_learning.py
Automatic FB login/: Project _ Automatic FB login.py
Breast Cancer Detection using Neural Network/: BreastCancerDetectionUsingCNN.ipynb
CALCULATOR_PYTHON/: CALC.py
CONTACT_BOOK_APPLICATION/: contact book application.py
CONTACT_MANAGEMENT_APP_DJANGO/: README.md  db.sqlite3  manage.py  requirements.txt
CREDITCARD_FRAUD_PREDICTION_PROJECT/: Credit Card  Fraudent Detection.ipynb  model.pkl
CreditCardFraudDetection/: CreditCardFraudDetection.ipynb  ReadMe.md
DATA_MANAGMENT_FRAMEWORK/: README.md  uploading_images.ipynb
FILE-RENAME-TOOL/: main.py
FILE_RENAME_TOOL/: LICENSE  README.md  main.py
FLIGHT_FARE_PREDICTION/: README.md  (+1 more)
Text Summarizer/: README.md  main.py  nltk_summarization.py  pyproject.toml  spacy_summarization.py  spacy_summarizer.py
Text Summarizer/static/css/: custom.css  materialize.css
Text Summarizer/static/img/: Thumbs.db
Text Summarizer/static/js/: init.js
Text Summarizer/templates/: index.html
(+146 files in other folders)
