[tool.poetry]
name = "repl_python3_SlategreyAwkwardFirewall"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
gensim = "^3.8.3"
sumy = "^0.8.1"
bs4 = "^0.0.1"
spacy = "^3.1.1"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
